<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bacon.secretsanta.AddPlayer">

    <TextView
        android:id="@+id/contact_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_editText"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/contact_textView"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_textView"
        android:ems="10"
        android:hint="@string/phone_editText"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_toStartOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_editText"
        android:ems="10"
        android:hint="@string/email_editText"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/radioGroup" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_editText"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/phone_editText"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/phone_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <RadioButton
            android:id="@+id/email_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="textStart" />

    </RadioGroup>

    <Button
        android:id="@+id/addPlayer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlayer_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/name_editText"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
